--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,6 +1,9 @@
-- name : test for front end
-  debug:
-    msg: fronten
+- name: Install Nginx
+  ansible.builtin.yum:
+    name: nginx
+    state: installed
+
+
 
 
 
