--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,7 +1,12 @@
-- name: test for frontend
-  debug:
-    msg: frontent
+- name: Install Nginx
+  ansible.builtin.yum:
+    name: nginx
+    state: installed
 
+- name: Include Download App code Tasks from common role
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: download-app-code
 
 
 
