--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Include Download App code Tasks from common role
   ansible.builtin.include_role:
-    name: common role
+    name: common
     tasks_from: download-app-code
 
 
