--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Include Download App code Tasks from common role
   ansible.builtin.include_role:
     name: common
-    tasks_from: download-app-code
+    tasks_from: download-app-code.yml
 
 
 
