--- a/roles/common/tasks/downoload-app-code.yml
+++ b/roles/common/tasks/downoload-app-code.yml
@@ -1,7 +1,7 @@
 - name: add roboshop application user
   when: APP_USER is defined
   ansible.builtin.user:
-    name: "{{ APP_USER }}"
+    name: '{{ APP_USER }}'
 
 - name: Download App Content
   ansible.builtin.get_url:
