--- a/roles/common/tasks/downoload-app-code.yml
+++ b/roles/common/tasks/downoload-app-code.yml
@@ -7,3 +7,21 @@
   ansible.builtin.get_url:
     url: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
     dest: /tmp/{{ COMPONENT }}.zip
+
+- name: Remove Previous Version of App
+  ansible.builtin.file:
+    path: "{{ APP_LOC }}"
+    state: absent
+
+
+- name: Download App Content & Extract it
+  ansible.builtin.unarchive:
+    src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
+    dest: "/tmp"
+    remote_src: yes
+
+- name: copy Extracted App Content to App location
+  ansible.builtin.copy:
+    src: /tmp/{{ COMPONENT }}-main/
+    dest: "{{ APP_LOC }}"
+    remote_src: yes
