--- a/roles/common/tasks/downoload-app-code.yml
+++ b/roles/common/tasks/downoload-app-code.yml
@@ -3,10 +3,6 @@
   ansible.builtin.user:
     name: '{{ APP_USER }}'
 
-- name: Download App Content
-  ansible.builtin.get_url:
-    url: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
-    dest: /tmp/{{ COMPONENT }}.zip
 
 - name: Remove Previous Version of App
   ansible.builtin.file:
@@ -16,7 +12,7 @@
 
 - name: Download App Content & Extract it
   ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{ COMPONENT }}/archive/main.zip
+    src: https://github.com/sunivibha/{{ COMPONENT }}/archive/refs/heads/main.zip
     dest: "/tmp"
     remote_src: yes
 
