--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -6,10 +6,18 @@
 - name: Include Download App code Tasks from common role
   ansible.builtin.include_role:
     name: common
-    tasks_from: downoload-app-code
+    tasks_from: download-app-code
+
+- name: Copy RoboShop Configuration File
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
 
 
-
-
+- name: Start Nginx Service
+  ansible.builtin.systemd:
+    name: nginx
+    state: restarted
+    enabled: yes
 
 
