--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -14,4 +14,8 @@
     regexp: '127.0.0.1'
     replace: '0.0.0.0'
 
-
+- name: start mongodb
+  ansible.builtin.systemd:
+    name: mongod
+    state: restarted
+    enabled: yes
