--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -10,3 +10,7 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: download-app-code
+
+- name: Install nodejs dependencies
+  community.general.npm:
+    path: "{{ APP_LOC }}"
