--- a/roles/aws-parameters.yml
+++ b/roles/aws-parameters.yml
@@ -6,3 +6,6 @@
         name: "{{item.name}}"
         value: "{{item.value}}"
         region: "us-east-1"
+      loop:
+        - {name: "param.dev.catalogue.MONGO", value: "true"}
+        - {name: "param.dev.user.MONGO", value: "true"}
