--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -3,7 +3,7 @@
 Description=catalogue service
 
 [Service]
-user=roboshop
+User=roboshop
 Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
 ExecStart=/usr/bin/node /home/roboshop/catalogue/server.js
 
