--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -4,15 +4,15 @@
 
     }
 
-    location /api/catalogue/ { proxy_pass http://localhost:8080/; }
+    location /api/catalogue/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.CATALOGUE_URL', region='us-east-1' ) }}; }
 
-    location /api/user/ { proxy_pass http://localhost:8080/; }
+    location /api/user/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.USER_URL', region='us-east-1' ) }}; }
 
-    location /api/cart/ { proxy_pass http://localhost:8080/; }
+    location /api/cart/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.CART_URL', region='us-east-1' ) }}; }
 
-    location /api/shipping/ { proxy_pass http://localhost:8080/; }
+    location /api/shipping/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.SHIPPING_URL', region='us-east-1' ) }}; }
 
-    location /api/payment/ { proxy_pass http://localhost:8080/; }
+    location /api/payment/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.PAYMENT_URL', region='us-east-1' ) }}; }
 
     location /health {
         stub_status on;
