--- a/roles/common/tasks/mongo.yml
+++ b/roles/common/tasks/mongo.yml
@@ -1,3 +1,13 @@
+- name: copy mongodb yum repo file
+  ansible.builtin.copy:
+    src: mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
+
+- name: Install mongodb
+  ansible.builtin.yum:
+    name: mongodb-org-shell
+    state: installed
+
 - name: Load Schema
   community.mongodb.mongodb_shell:
    login_host: "{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_ENDPOINT', region='us-east-1' ) }}"
