--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -5,8 +5,12 @@ Description=catalogue service
 [Service]
 User=roboshop
 Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
+Environment=MONGO_URL="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_URL', region='us-east-1' ) }}"
 ExecStart=/usr/bin/node /home/roboshop/catalogue/server.js
 
 
 [Install]
 WantedBy=multi-user.target
+
+
+MONGO_URL
