--- a/roles/common/tasks/mongo.yml
+++ b/roles/common/tasks/mongo.yml
@@ -3,7 +3,7 @@
     src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
 
-- name: Install mongodb
+- name: Install mongodb client
   ansible.builtin.yum:
     name: mongodb-org-shell
     state: installed
