--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -15,3 +15,7 @@
         - {name: "param.dev.frontend.CART_URL", value: "http://dev-cart.suvi88.online:8080/"}
         - {name: "param.dev.frontend.SHIPPING_URL", value: "http://dev-shipping.suvi88.online:8080/"}
         - {name: "param.dev.frontend.PAYMENT_URL", value: "http://dev-payment.suvi88.online:8080/"}
+        - { name: "param.dev.user.MONGO", value: "true" }
+        - { name: "param.dev.user.MONGO_ENDPOINT", value: "dev-mongodb.suvi88.online" }
+        - { name: "param.dev.user.MONGO_URL", value: "mongodb://dev-mongodb.suvi88.online:27017/users" }
+        - { name: "param.dev.user.REDIS_HOST", value: "dev-redis.suvi88.online" }
