--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -19,3 +19,6 @@
         - { name: "param.dev.user.MONGO_ENDPOINT", value: "dev-mongodb.suvi88.online" }
         - { name: "param.dev.user.MONGO_URL", value: "mongodb://dev-mongodb.suvi88.online:27017/users" }
         - { name: "param.dev.user.REDIS_HOST", value: "dev-redis.suvi88.online" }
+        - { name: "param.dev.cart.REDIS_HOST", value: "dev-redis.suvi88.online" }
+        - { name: "param.dev.cart.CATALOGUE_HOST", value: "dev-catalogue.suvi88.online" }
+        - { name: "param.dev.cart.CATALOGUE_PORT", value: "8080" }
