--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -22,3 +22,4 @@
         - { name: "param.dev.cart.REDIS_HOST", value: "dev-redis.suvi88.online" }
         - { name: "param.dev.cart.CATALOGUE_HOST", value: "dev-catalogue.suvi88.online" }
         - { name: "param.dev.cart.CATALOGUE_PORT", value: "8080" }
+        - { name: "param.dev.mysql.ROOT_PASSWORD", value: "RoboShop@1" }
