--- a/roles/common/tasks/mongo.yml
+++ b/roles/common/tasks/mongo.yml
@@ -1,7 +1,7 @@
 - name: copy mongodb yum repo file
   ansible.builtin.copy:
-    src: mongodb.repo
-    dest: /etc/yum.repos.d/mongodb.repo
+    src: mysql.repo
+    dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install mongodb client
   ansible.builtin.yum:
