--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -1,9 +1,7 @@
-- name: Configure Nodejs repo
-  ansible.builtin.shell: curl -sL https://rpm.nodesource.com/setup_lts.x | bash
 
-- name: Install NodeJS
+- name: Install Maven
   ansible.builtin.yum:
-    name: nodejs
+    name: maven
     state: installed
 
 - name: Include Download App Code Tasks from Common Role
@@ -11,9 +9,10 @@
     name: common
     tasks_from: download-app-code
 
-- name: Install nodejs dependencies
-  community.general.npm:
-    path: "{{ APP_LOC }}"
+- name: Compile Code
+  ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
+  args:
+    chdir: "{{ APP_LOC }}"
 
 - name: Load schema
   when: LOAD_SCHEMA
