--- a/roles/common/tasks/mongo.yml
+++ b/roles/common/tasks/mongo.yml
@@ -1,6 +1,6 @@
 - name: copy mongodb yum repo file
   ansible.builtin.copy:
-    src: mysql.repo
+    src: mongodb.repo
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install mongodb client
@@ -13,3 +13,4 @@
     login_host: "{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_ENDPOINT', region='us-east-1' ) }}"
     file: "{{APP_LOC}}/schema/{{COMPONENT}}.js"
     idempotent: yes
+
