--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -15,11 +15,11 @@
   community.general.npm:
     path: "{{ APP_LOC }}"
 
-- name: Load schema
-  when: LOAD_SCHEMA
-  ansible.builtin.include_role:
-    name: common
-    tasks_from: "{{DBTYPE}}"
+#- name: Load schema
+#  when: LOAD_SCHEMA
+#  ansible.builtin.include_role:
+#    name: common
+#    tasks_from: "{{DBTYPE}}"
 
 - name: systemd tasks
   ansible.builtin.include_role:
