--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -12,7 +12,7 @@
 
     #location /api/shipping/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.SHIPPING_URL', region='us-east-1' ) }}/; }
 
-    location /api/payment/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.PAYMENT_URL', region='us-east-1' ) }}/; }
+    #location /api/payment/ { proxy_pass {{ lookup('aws_ssm', 'param.{{ENV}}.frontend.PAYMENT_URL', region='us-east-1' ) }}/; }
 
     location /health {
         stub_status on;
