--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -20,5 +20,20 @@
     state: restarted
     enabled: yes
 
+- name: Download App Content & Extract it
+  ansible.builtin.unarchive:
+    src: https://github.com/sunivibha/{{ COMPONENT }}/archive/refs/heads/main.zip
+    dest: "/tmp"
+    remote_src: yes
+
+- name: Load Schema
+  community.mongodb.mongodb_shell:
+    file:"/tmp/mongodb-main/{{item}}.js"
+    idempotent: yes
+  loop:
+    - catalogue
+    - users
+
+
 
 
