--- a/roles/catalogue/vars/main.yml
+++ b/roles/catalogue/vars/main.yml
@@ -1,5 +1,5 @@
 COMPONENT: catalogue
 APP_USER: roboshop
 APP_LOC: /home/roboshop/catalogue
-DBTYPE: mongo
-LOAD_SCHEMA: yes
+#DBTYPE: mongo
+#LOAD_SCHEMA: yes
