--- a/roles/common/tasks/mongo.yml
+++ b/roles/common/tasks/mongo.yml
@@ -1,17 +1,17 @@
-- name: copy mongodb yum repo file
-  ansible.builtin.copy:
-    src: mongodb.repo
-    dest: /etc/yum.repos.d/mysql.repo
+#- name: copy mongodb yum repo file
+# ansible.builtin.copy:
+#    src: mongodb.repo
+#   dest: /etc/yum.repos.d/mysql.repo
 
-- name: Install mongodb client
-  ansible.builtin.yum:
-    name: mongodb-org-shell
-    state: installed
+#- name: Install mongodb client
+#  ansible.builtin.yum:
+#    name: mongodb-org-shell
+#    state: installed
 
-- name: Load Schema
-  community.mongodb.mongodb_shell:
-    login_host: "{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_ENDPOINT', region='us-east-1' ) }}"
-    file: "{{APP_LOC}}/schema/{{COMPONENT}}.js"
-    idempotent: yes
+#- name: Load Schema
+#  community.mongodb.mongodb_shell:
+#    login_host: "{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_ENDPOINT', region='us-east-1' ) }}"
+#    file: "{{APP_LOC}}/schema/{{COMPONENT}}.js"
+#    idempotent: yes
 
 
