--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: copy mongodb yum repo file
   ansible.builtin.copy:
-    src: mysql.repo
+    src: mongodb.repo
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install mongodb
