--- a/aws-parameters.yml
+++ b/aws-parameters.yml
@@ -25,4 +25,12 @@
         - { name: "param.dev.mysql.ROOT_PASSWORD", value: "RoboShop@1"}
         - { name: "param.dev.shipping.DB_HOST", value: "dev-mysql.suvi88.online"}
         - { name: "param.dev.shipping.CART_ENDPOINT", value: "dev-cart.suvi88.online:8080"}
-        - { name: "param.dev.shipping.ROOT_PASSWORD", value: "RoboShop@1"}
+        - { name: "param.dev.payment.USER_HOST", value: "dev-user.suvi88.online"}
+        - { name: "param.dev.payment.CART_HOST", value: "dev-cart.suvi88.online"}
+        - { name: "param.dev.payment.AMQP_HOST", value: "dev-rabbitmq.suvi88.online"}
+        - { name: "param.dev.payment.AMQP_USER", value: "roboshop"}
+        - { name: "param.dev.payment.AMQP_PASS", value: "roboshop123"}
+        - { name: "param.dev.rabbitmq.AMQP_PASS", value: "roboshop123"}
+        - { name: "param.dev.rabbitmq.AMQP_USER", value: "roboshop"}
+
+
