--- a/roles/common/tasks/download-app-code.yml
+++ b/roles/common/tasks/download-app-code.yml
@@ -2,6 +2,11 @@
   when: APP_USER is defined
   ansible.builtin.user:
     name: '{{ APP_USER }}'
+  register: appuser
+
+#- name: debug
+#  debug:
+#    msg: "{{appuser}}"
 
 
 - name: Remove Previous Version of App
