--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -9,26 +9,29 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          # - alertmanager:9093
+            - localhost:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-# - "first_rules.yml"
-# - "second_rules.yml"
+  - "record_rules.yml"
+  - "alert_rules.yml"
+  - "/opt/prometheus/alerts-rules/*.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "ec2-nodes"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
+    relabel_configs:
+      - source_labels: [__meta_ec2_ami]
+        target_label: ami
+      - source_labels: [__meta_ec2_instance_type]
+        target_label: instance_type
+      - source_labels: [__meta_ec2_tag_Name]
+        target_label: tag_Name
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
         filters:
           - name: "tag:Monitor"
             values: [ "yes", "true", "Yes", "True" ]
-
