--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -1,3 +1,13 @@
+- name: Copy Record Rules
+  ansible.builtin.template:
+    src: record_rules.yml
+    dest: /opt/prometheus/record_rules.yml
+
+- name: Copy Alert Rules
+  ansible.builtin.template:
+    src: alert_rules.yml
+    dest: /opt/prometheus/alert_rules.yml
+
 - name: copy prometheus config
   ansible.builtin.template:
     src: prometheus.yml
