--- a/roles/prometheus/templates/alert_rules.yml
+++ b/roles/prometheus/templates/alert_rules.yml
@@ -10,3 +10,13 @@ groups:
         annotations:
           summary: InstanceDown
           description: InstanceDown
+{% for componet in APPLICATION_LIST %}
+      - alert: Application Down - {{component.name}}
+        expr: node_systemd_unit_state{name="{{component.serviceName}}.service",state="active"} == 0
+        labels:
+          severity: warnibg
+          project: roboshop
+        annotations:
+          summary: Application Down - {{component.name}}
+          description: InstanceDown - {{component.name}}
+{% endfor %}
