--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -24,3 +24,8 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: systemd
+
+- name: Prometheus Alert
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: prom-alerts
