--- a/roles/prometheus/tasks/server.yml
+++ b/roles/prometheus/tasks/server.yml
@@ -13,10 +13,17 @@
     src: prometheus.yml
     dest: /opt/prometheus/prometheus.yml
 
-- name: Restart prometheus service
+- name: Reload Service
+  ansible.builtin.shell: curl -f -v -X POST http://localhost:9090/-/reload
+  ignore_errors: yes
+  register: stat
+
+- name: Restart Prometheus Service
   ansible.builtin.systemd:
     name: prometheus
     state: restarted
+  when: stat is failed
+
 
 - name: Check Prometheus Service is running
   ansible.builtin.shell: netstat -lntp | grep 9090
