--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -25,3 +25,8 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: systemd
+
+- name: Prometheus Alert
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: prom-alerts
