--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -9,3 +9,13 @@
     state: restarted
     enabled: yes
     daemon-reload: yes
+
+- name: Copy RSyslog Config
+  ansible.builtin.template:
+    src: roboshop.conf
+    dest: /etc/rsyslog.d/roboshop.conf
+
+- name: Restart Rsyslog
+  ansible.builtin.systemd:
+    name: rsyslog
+    state: restarted
