--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -7,7 +7,7 @@ User=roboshop
 Environment=MONGO="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO', region='us-east-1' ) }}"
 Environment=MONGO_URL="{{ lookup('aws_ssm', 'param.{{ENV}}.catalogue.MONGO_URL', region='us-east-1' ) }}"
 ExecStart=/usr/bin/node /home/roboshop/catalogue/server.js
-
+Syslogidentifier=catalogue
 
 [Install]
 WantedBy=multi-user.target
