--- a/roles/shipping/templates/systemd.service
+++ b/roles/shipping/templates/systemd.service
@@ -7,6 +7,7 @@ User=roboshop
 Environment=DB_HOST="{{ lookup('aws_ssm', 'param.{{ENV}}.shipping.DB_HOST', region='us-east-1' ) }}"
 Environment=CART_ENDPOINT="{{ lookup('aws_ssm', 'param.{{ENV}}.shipping.CART_ENDPOINT', region='us-east-1' ) }}"
 ExecStart=/bin/java -jar /home/roboshop/shipping/shipping.jar
+Syslogidentifier=shipping
 
 
 [Install]
