--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -20,6 +20,10 @@
     state: started
     enabled: yes
 
+- name: Include Filebeat
+  ansible.builtin.include_role:
+    name: elk
+    tasks_from: filebeat
 
 
 
